# voronoice

./: .gitignore  Cargo.toml  LICENSE  README.md  gen
benches/: bench_base.rs  compare_with_deps.rs  huge.rs  large.rs  large_input_benchmark.rs  my_benchmark.rs  profile.rs  quick.rs
examples/: assertions.rs  generator.rs  image.rs  svg.rs
examples/assets/: clockwise1.json  degenerated1.json  degenerated10.json  degenerated11.json  degenerated2.json  degenerated3.json  degenerated4.json  degenerated5.json  degenerated6.json  degenerated7.json  degenerated8.json  degenerated9.json
src/: bounding_box.rs  cell.rs  cell_builder.rs  cell_clipping.rs  edges_around_site_iterator.rs  forward frag  forward.vert  iterator.rs  lib.rs  main.rs  pipeline.rs  utils.rs  voronoi_builder.rs  voronoi_cell.rs
src/voronoi/: bounding_box.rs  cell.rs  cell_clipping.rs  edges_around_site_iterator.rs  into_triangle_list.rs  mod.rs  utils.rs  voronoi_builder.rs  voronoi_mesh_generator.rs
