[package]
name = "voronoice"
version = "0.1.1"
edition = "2018"
authors = ["Andre Esteve <andreesteve@gmail.com>"]
description = "A nice and fast way to construct 2D Voronoi Diagrams"
repository = "https://github.com/andreesteve/voronoice"
license = "MIT"
keywords = ["voronoi", "delaunay", "graphics", "diagram"]
categories = ["graphics", "visualization"]
readme = "README.md"

[dependencies]
delaunator = { version = "^1" }
robust = { version = "^0.2" }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.1"
image = "0.23.14"
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }

[[bench]]
name = "quick"
harness = false

[[bench]]
name = "large_input_benchmark"
harness = false

[[bench]]
name = "compare_with_deps"
harness = false

[[example]]
name = "image"
path = "examples/image.rs"

[[example]]
name = "assertions"
path = "examples/assertions.rs"

[[example]]
name = "generator"
path = "examples/generator.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"
