[package]
name = "voronoice"
version = "0.2.0"
edition = "2018"
authors = ["Andre Esteve <andreesteve@gmail.com>"]
description = "A nice and fast way to construct 2D Voronoi Diagrams"
repository = "https://github.com/andreesteve/voronoice"
license = "MIT"
keywords = ["voronoi", "delaunay", "graphics", "diagram"]
categories = ["graphics", "visualization"]
readme = "README.md"

[dependencies]
delaunator = { version = "^1" }

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.1"
image = "0.23.14"
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
robust = { version = "^0.2" }

[[bench]]
name = "quick"
harness = false

[[bench]]
name = "large"
harness = false

[[bench]]
name = "huge"
harness = false

[[bench]]
name = "compare_with_deps"
harness = false

[[example]]
name = "image"
path = "examples/image.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"
